--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,6 +1,6 @@
 body
 {
-    color: peru;
+    color: red;
     text-align: center;
-    font-family: Arial;
+    font-family: 'Times New Roman', Times, serif;
 }
