--- a/css/estilos.css
+++ b/css/estilos.css
@@ -4,3 +4,9 @@ body
     text-align: center;
     font-family: 'Courier New', Courier, monospace;
 }
+footer
+{
+    color: red;
+    text-align: right;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+}
